# rayska

./: .clang-format  CMakeLists.txt  README.md  main.cpp  ray.cpp  ray.hpp  vec3d.cpp  vec3d.hpp  writer.hpp
src/: CMakeLists.txt  main.cpp
src/core/: Camera.cpp  Camera.h  Common.h  Ray.cpp  Ray.h  Vec3d.cpp  Vec3d.h  Writer.cpp  Writer.h  camera.cpp  camera.hpp  common.hpp  ray.cpp  ray.hpp  vec3d.cpp  vec3d.hpp  writer.hpp
src/hittables/: Hittable.h  HittableList.cpp  HittableList.h  Sphere.cpp  Sphere.h  hittable.hpp  hittable_list.cpp  hittable_list.hpp  sphere.cpp  sphere.hpp
src/materials/: Diffuse.cpp  Diffuse.h  Glass.cpp  Glass.h  Material.h  Metal.cpp  Metal.h  diffuse.cpp  diffuse.hpp  glass.cpp  glass.hpp  material.hpp  metal.cpp  metal.hpp
